# cvdemo

./: .gitignore  README.md
backend/: .env.example  cv_data.json  cv_data.py  main.py  package-lock.json  package.json  pyproject.toml  server.js  worker.js  wrangler.toml
backend/.wrangler/tmp/bundle-684ahd/: middleware-loader.entry.ts
backend/.wrangler/tmp/bundle-D4Ri42/: middleware-loader.entry.ts
backend/.wrangler/tmp/bundle-ciRjqc/: middleware-insertion-facade.js  middleware-loader.entry.ts
backend/.wrangler/tmp/bundle-fak16L/: middleware-loader.entry.ts
backend/.wrangler/tmp/dev-72msjV/: worker.js  worker.js.map
backend/.wrangler/tmp/dev-NoXnG5/: worker.js  worker.js.map
backend/.wrangler/tmp/dev-XTlw4X/: worker.js  worker.js.map
backend/.wrangler/tmp/dev-qwg1Dp/: worker.js  worker.js.map
backend/data/: cv-data.js
backend/python_modules/fastapi-0.128.2.dist-info/: RECORD
backend/python_modules/markdown_it_py-4.0.0.dist-info/: RECORD
backend/python_modules/pygments-2.19.2.dist-info/: RECORD
backend/python_modules/pyodide_cli-0.5.0.dist-info/: METADATA  RECORD
backend/python_modules/python_dotenv-1.2.1.dist-info/: RECORD
backend/python_modules/workers_py-1.2.1.dist-info/: RECORD
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Contact.css  Contact.jsx  Education.css  Education.jsx  Experience.css  Experience.jsx  Header.css  Header.jsx  Hero.css  Hero.jsx  Skills.css  Skills.jsx
